Divide Java module into 3 packages for separation of concerns
Solves #8

--- a/globingular/src/main/resources/fxml/App.fxml
+++ b/globingular/src/main/resources/fxml/App.fxml
@@ -3,6 +3,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.control.Button?>
 
-<Pane xmlns:fx="http://javafx.com/fxml/1" fx:controller="globingular.AppController">
+<Pane xmlns:fx="http://javafx.com/fxml/1" fx:controller="globingular.ui.AppController">
     <Button fx:id="clickMeButton" text="Click me!" onAction="#handleClickMeButtonAction"/>
 </Pane>
