--- a/src/main/resources/fxml/App.fxml
+++ b/src/main/resources/fxml/App.fxml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane prefHeight="389.0" prefWidth="390.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="globingular.AppController">
-    <Button fx:id="clickMeButton" onAction="#handleClickMeButtonAction" text="Click me!" />
+<Pane prefHeight="600" prefWidth="800" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="globingular.AppController">
    <HBox layoutX="32.0" layoutY="46.0" prefHeight="304.0" prefWidth="318.0">
       <children>
-         <ImageView fx:id="imgView" fitHeight="309.0" fitWidth="324.0" pickOnBounds="true" preserveRatio="true" />
+         <ImageView fx:id="imgView" fitHeight="776.0" fitWidth="721.0" pickOnBounds="true" preserveRatio="true" />
       </children>
    </HBox>
 </Pane>
