--- a/globingular/src/main/resources/fxml/App.fxml
+++ b/globingular/src/main/resources/fxml/App.fxml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<Pane xmlns:fx="http://javafx.com/fxml/1" fx:controller="globingular.ui.AppController">
-    <Button fx:id="clickMeButton" text="Click me!" onAction="#handleClickMeButtonAction"/>
-</Pane>
+
+<AnchorPane fx:controller="globingular.ui.AppController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <ListView fx:id="countriesList" layoutX="393.0" layoutY="8.0" prefHeight="200.0" prefWidth="200.0" />
+      <TextField fx:id="countryInput" onAction="#onCountryAdd" layoutX="393.0" layoutY="217.0" />
+      <Button fx:id="countryAdd" onAction="#onCountryAdd" layoutX="562.0" layoutY="217.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="28.0" text="+" />
+   </children>
+</AnchorPane>
