--- a/globingular/ui/src/main/resources/fxml/App.fxml
+++ b/globingular/ui/src/main/resources/fxml/App.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane prefHeight="600" prefWidth="1040.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it1901.gr2002.globingular.ui.AppController">
+<Pane prefHeight="600" prefWidth="1040.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="globingular.ui.AppController">
    <HBox layoutX="32.0" layoutY="46.0" prefHeight="304.0" prefWidth="318.0">
       <ImageView fx:id="imgView" fitHeight="776.0" fitWidth="721.0" pickOnBounds="true" preserveRatio="true" />
    </HBox>
