--- a/globingular/ui/src/main/resources/html-css/country.css
+++ b/globingular/ui/src/main/resources/html-css/country.css
@@ -1,6 +1,5 @@
 html {
     --javafx-default-bg: #f5f5f5;
-    --visited-country: #cc2200;
 
     padding: 0;
     background-color: var(--javafx-default-bg);
@@ -12,23 +11,7 @@ body {
     margin: 0;
 }
 
-svg g {
-    fill: dimgray;
-}
-
-#World {
-    fill: var(--javafx-default-bg);
-}
-
-#Ocean {
-    fill: var(--javafx-default-bg)
-}
-
-[visited] {
-    fill: var(--visited-country);
-}
-
-svg {
+object {
     /* Fix small bottom overextension */
     margin-bottom: -4px;
 }
