--- a/globingular/ui/src/main/resources/fxml/App.fxml
+++ b/globingular/ui/src/main/resources/fxml/App.fxml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.web.WebView ?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.AnchorPane?>
-<Pane fx:id="root" prefHeight="720" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="globingular.ui.AppController">
-    <TabPane prefHeight="720.0" prefWidth="1280.0" tabClosingPolicy="UNAVAILABLE">
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.web.WebView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.FlowPane?>
+<HBox fx:id="root" prefHeight="720" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="globingular.ui.AppController">
+    <TabPane tabClosingPolicy="UNAVAILABLE" HBox.hgrow="ALWAYS">
         <Tab text="Map">
-            <AnchorPane minHeight="720" minWidth="1280">
-                <HBox spacing="15">
-                    <WebView fx:id="webView" prefWidth="1000" prefHeight="540"/>
-                    <VBox spacing="15">
-                        <ListView fx:id="countriesList" prefHeight="200.0" prefWidth="200.0"/>
-                        <HBox spacing="5">
-                            <TextField fx:id="countryInput" onAction="#onCountryAdd" prefHeight="27.0" prefWidth="134.0"/>
-                            <Button layoutX="5" fx:id="countryAdd" mnemonicParsing="false" onAction="#onCountryAdd" prefHeight="27.0" prefWidth="28.0" text="+"/>
-                            <Button layoutX="5" fx:id="countryDel" mnemonicParsing="false" onAction="#onCountryDel" prefHeight="27.0" prefWidth="28.0" text="-"/>
-                        </HBox>
-                    </VBox>
-                </HBox>
-            </AnchorPane>
+            <ScrollPane hbarPolicy="NEVER" fitToWidth="true">
+                <FlowPane vgap="5" hgap="10" minWidth="0" fx:id="mapFlow">
+                    <padding>
+                        <Insets left="20" right="20" top="20" bottom="20"/>
+                    </padding>
+                    <ScrollPane vbarPolicy="NEVER" minWidth="0" maxWidth="${mapFlow.width-35}" prefViewportWidth="1000">
+                        <WebView fx:id="webView" minWidth="1000" minHeight="450"/>
+                    </ScrollPane>
+                    <GridPane vgap="5" hgap="5" minHeight="200">
+                        <ListView fx:id="countriesList" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="0" GridPane.columnIndex="0" GridPane.columnSpan="3"/>
+                        <TextField fx:id="countryInput" onAction="#onCountryAdd" prefHeight="27.0" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+                        <Button fx:id="countryAdd" mnemonicParsing="false" onAction="#onCountryAdd" prefHeight="27.0" prefWidth="27.0" text="+" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+                        <Button fx:id="countryDel" mnemonicParsing="false" onAction="#onCountryDel" prefHeight="27.0" prefWidth="27.0" text="-" GridPane.rowIndex="1" GridPane.columnIndex="2"/>
+                    </GridPane>
+                </FlowPane>
+            </ScrollPane>
         </Tab>
         <Tab text="Badges &amp; statistics">
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"/>
         </Tab>
     </TabPane>
-</Pane>
+</HBox>
