--- a/globingular/ui/src/main/resources/fxml/App.fxml
+++ b/globingular/ui/src/main/resources/fxml/App.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
@@ -14,99 +13,48 @@
 <?import javafx.scene.text.Font?>
 
 <Pane fx:id="root" prefHeight="600" prefWidth="1040.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="globingular.ui.AppController">
-   <TabPane prefHeight="600.0" prefWidth="1040.0" tabClosingPolicy="UNAVAILABLE">
-     <tabs>
-       <Tab text="Map">
-         <content>
-           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                  <children>
-                      <TextField fx:id="countryInput" layoutX="750.0" layoutY="250.0" onAction="#onCountryAdd" prefHeight="27.0" prefWidth="183.0" />
-                      <HBox layoutY="30.0" prefHeight="304.0" prefWidth="318.0">
-                          <ImageView fx:id="imgView" fitHeight="776.0" fitWidth="721.0" pickOnBounds="true" preserveRatio="true" />
-                      </HBox>
-                      <ListView fx:id="countriesList" layoutX="750.0" layoutY="30.0" prefHeight="200.0" prefWidth="253.0" />
-                      <Button fx:id="countryAdd" layoutX="940.0" layoutY="250.0" mnemonicParsing="false" onAction="#onCountryAdd" prefHeight="27.0" prefWidth="28.0" text="+" />
-                      <Button fx:id="countryDel" layoutX="974.0" layoutY="250.0" mnemonicParsing="false" onAction="#onCountryDel" prefHeight="27.0" prefWidth="28.0" text="-" />
-                  </children>
-               </AnchorPane>
-         </content>
-       </Tab>
-       <Tab text="Badges &amp; statistics">
-         <content>
-           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                  <children>
-                     <Pane prefHeight="600.0" prefWidth="520.0">
-                        <children>
-                           <Label layoutX="10.0" layoutY="10.0" text="Badges">
-                              <font>
-                                 <Font name="Verdana" size="26.0" />
-                              </font>
-                           </Label>
-                           <Separator layoutX="520.0" orientation="VERTICAL" prefHeight="600.0" />
-                        </children>
-                     </Pane>
-                     <Pane layoutX="520.0" prefHeight="600.0" prefWidth="520.0">
-                        <children>
-                           <Label layoutX="10.0" layoutY="10.0" text="Statistics">
-                              <font>
-                                 <Font size="26.0" />
-                              </font>
-                           </Label>
-                           <Label layoutX="10.0" layoutY="55.0" text="Number of countries visited:">
-                              <font>
-                                 <Font size="14.0" />
-                              </font>
-                           </Label>
-                           <Label layoutX="10.0" layoutY="80.0" text="Most populated visited country:">
-                              <font>
-                                 <Font size="14.0" />
-                              </font>
-                           </Label>
-                           <Label layoutX="10.0" layoutY="105.0" text="Average countries visited in Africa:">
-                              <font>
-                                 <Font size="14.0" />
-                              </font>
-                           </Label>
-                           <Label layoutX="10.0" layoutY="155.0" text="Average countries visited in Europe:">
-                              <font>
-                                 <Font size="14.0" />
-                              </font>
-                           </Label>
-                           <Label layoutX="10.0" layoutY="130.0" text="Average countries visited in Asia:">
-                              <font>
-                                 <Font size="14.0" />
-                              </font>
-                           </Label>
-                           <Label fx:id="nrOfCountriesVisited" layoutX="350.0" layoutY="55.0" text="-">
-                              <font>
-                                 <Font size="14.0" />
-                              </font>
-                           </Label>
-                           <Label fx:id="mostPopulatedVisitedCountry" layoutX="350.0" layoutY="80.0" text="-">
-                              <font>
-                                 <Font size="14.0" />
-                              </font>
-                           </Label>
-                           <Label layoutX="350.0" layoutY="105.0" text="-">
-                              <font>
-                                 <Font size="14.0" />
-                              </font>
-                           </Label>
-                           <Label layoutX="350.0" layoutY="130.0" text="-">
-                              <font>
-                                 <Font size="14.0" />
-                              </font>
-                           </Label>
-                           <Label layoutX="350.0" layoutY="155.0" text="-">
-                              <font>
-                                 <Font size="14.0" />
-                              </font>
-                           </Label>
-                        </children>
-                     </Pane>
-                  </children></AnchorPane>
-         </content>
-       </Tab>
-     </tabs>
-   </TabPane>
+    <TabPane prefHeight="600.0" prefWidth="1040.0" tabClosingPolicy="UNAVAILABLE">
+        <Tab text="Map">
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                <TextField fx:id="countryInput" layoutX="750.0" layoutY="250.0" onAction="#onCountryAdd" prefHeight="27.0" prefWidth="183.0" />
+                <HBox layoutY="30.0" prefHeight="304.0" prefWidth="318.0">
+                    <ImageView fx:id="imgView" fitHeight="776.0" fitWidth="721.0" pickOnBounds="true" preserveRatio="true" />
+                </HBox>
+                <ListView fx:id="countriesList" layoutX="750.0" layoutY="30.0" prefHeight="200.0" prefWidth="253.0" />
+                <Button fx:id="countryAdd" layoutX="940.0" layoutY="250.0" mnemonicParsing="false" onAction="#onCountryAdd" prefHeight="27.0" prefWidth="28.0" text="+" />
+                <Button fx:id="countryDel" layoutX="974.0" layoutY="250.0" mnemonicParsing="false" onAction="#onCountryDel" prefHeight="27.0" prefWidth="28.0" text="-" />
+            </AnchorPane>
+        </Tab>
+        <Tab text="Statistics">
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                <Pane prefHeight="600.0" prefWidth="1040.0">
+                    <Label layoutX="10.0" layoutY="10.0" text="Statistics">
+                        <font>
+                            <Font size="26.0" />
+                        </font>
+                    </Label>
+                    <Label layoutX="10.0" layoutY="55.0" text="Number of countries visited:">
+                        <font>
+                            <Font size="14.0" />
+                        </font>
+                    </Label>
+                    <Label layoutX="10.0" layoutY="80.0" text="Most populated visited country:">
+                        <font>
+                            <Font size="14.0" />
+                        </font>
+                    </Label>
+                    <Label fx:id="nrOfCountriesVisited" layoutX="350.0" layoutY="55.0" text="-">
+                        <font>
+                            <Font size="14.0" />
+                        </font>
+                    </Label>
+                    <Label fx:id="mostPopulatedVisitedCountry" layoutX="350.0" layoutY="80.0" text="-">
+                        <font>
+                            <Font size="14.0" />
+                        </font>
+                    </Label>
+                </Pane>
+            </AnchorPane>
+        </Tab>
+    </TabPane>
 </Pane>
