--- a/globingular/ui/src/main/resources/svg-css/country.css
+++ b/globingular/ui/src/main/resources/svg-css/country.css
@@ -1,7 +1,7 @@
 /* Must be inlined in target SVG using a <link>-tag or <style>-tag */
 
 svg {
-    --visited-country: #a4b787;
+    --visited-country: #9cc495;
     --javafx-default-bg: #f5f5f5;
 }
 
