--- a/globingular/ui/src/main/resources/fxml/App.fxml
+++ b/globingular/ui/src/main/resources/fxml/App.fxml
@@ -43,7 +43,7 @@
                             <Font size="14.0" />
                         </font>
                     </Label>
-                    <Label fx:id="nrOfCountriesVisited" layoutX="350.0" layoutY="55.0" text="-">
+                    <Label fx:id="numberOfCountriesVisited" layoutX="350.0" layoutY="55.0" text="-">
                         <font>
                             <Font size="14.0" />
                         </font>
