--- a/globingular/ui/src/main/resources/fxml/App.fxml
+++ b/globingular/ui/src/main/resources/fxml/App.fxml
@@ -9,12 +9,9 @@
 <?import javafx.scene.control.Tab ?>
 <?import javafx.scene.control.TabPane ?>
 <?import javafx.scene.control.TextField ?>
-<?import javafx.scene.layout.AnchorPane ?>
-<?import javafx.scene.layout.ColumnConstraints ?>
 <?import javafx.scene.layout.FlowPane ?>
 <?import javafx.scene.layout.GridPane ?>
 <?import javafx.scene.layout.HBox ?>
-<?import javafx.scene.layout.RowConstraints ?>
 <?import javafx.scene.text.Font ?>
 <?import javafx.scene.web.WebView ?>
 
@@ -34,23 +31,13 @@
                         <TextField fx:id="countryInput" onAction="#onCountryAdd" prefHeight="27.0" GridPane.columnIndex="0" GridPane.rowIndex="1" />
                         <Button fx:id="countryAdd" mnemonicParsing="false" onAction="#onCountryAdd" prefHeight="27.0" prefWidth="27.0" text="+" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                         <Button fx:id="countryDel" mnemonicParsing="false" onAction="#onCountryDel" prefHeight="27.0" prefWidth="27.0" text="-" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                        <columnConstraints>
-                            <ColumnConstraints />
-                            <ColumnConstraints />
-                            <ColumnConstraints />
-                        </columnConstraints>
-                        <rowConstraints>
-                            <RowConstraints />
-                            <RowConstraints />
-                        </rowConstraints>
                     </GridPane>
                 </FlowPane>
             </ScrollPane>
         </Tab>
         <Tab text="Statistics">
             <HBox fx:id="statistics" prefHeight="690.0" prefWidth="1280.0">
-                <GridPane fx:id="statisticsGrid" prefHeight="125.0" prefWidth="639.0">
-                </GridPane>
+                <GridPane fx:id="statisticsGrid" prefHeight="125.0" prefWidth="639.0"/>
                 <Separator orientation="VERTICAL" prefHeight="200.0" />
             </HBox>
         </Tab>
