Fix map visited-coloring for countries composited of several SVG-paths
Closes #73

--- a/globingular/ui/src/main/resources/svg-css/country.css
+++ b/globingular/ui/src/main/resources/svg-css/country.css
@@ -17,7 +17,7 @@ g {
     fill: var(--javafx-default-bg)
 }
 
-[visited] {
+[visited], [visited] * {
     /* !important required to override inline style */
     fill: var(--visited-country)!important;
 }
