--- a/globingular/ui/src/main/resources/fxml-css/App.css
+++ b/globingular/ui/src/main/resources/fxml-css/App.css
@@ -3,3 +3,11 @@
     -fx-border-width: 2px;
     -fx-border-style: solid;
 }
+
+.dualInputAndDisplay:readonly {
+    -fx-background-color: none;
+}
+
+.smallHeading {
+    -fx-text-fill: #5f5f5f;
+}
