--- a/globingular/ui/src/main/resources/fxml/App.fxml
+++ b/globingular/ui/src/main/resources/fxml/App.fxml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
@@ -9,9 +9,13 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.web.WebView?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.VBox?>
 <HBox fx:id="root" prefHeight="720" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="globingular.ui.AppController">
     <TabPane tabClosingPolicy="UNAVAILABLE" HBox.hgrow="ALWAYS">
         <Tab text="Map">
@@ -23,11 +27,23 @@
                     <ScrollPane maxWidth="${mapFlow.width-35}" minWidth="0" prefViewportWidth="1000" vbarPolicy="NEVER">
                         <WebView fx:id="webView" maxHeight="507" minHeight="507" minWidth="1000" prefHeight="507" />
                     </ScrollPane>
-                    <GridPane hgap="5" minHeight="200" vgap="5">
-                        <ListView fx:id="countriesList" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.rowIndex="0" />
-                        <TextField fx:id="countryInput" onAction="#onCountryAdd" prefHeight="27.0" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                        <Button fx:id="countryAdd" mnemonicParsing="false" onAction="#onCountryAdd" prefHeight="27.0" prefWidth="27.0" text="+" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Button fx:id="countryDel" mnemonicParsing="false" onAction="#onCountryDel" prefHeight="27.0" prefWidth="27.0" text="-" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                    <GridPane vgap="5" hgap="5" minHeight="200">
+                        <VBox GridPane.rowIndex="0" GridPane.columnIndex="0" GridPane.columnSpan="3">
+                            <Label styleClass="smallHeading" labelFor="$userInput" text="User:">
+                                <padding>
+                                    <Insets left="7"/>
+                                </padding>
+                            </Label>
+                            <Separator/>
+                        </VBox>
+                        <AnchorPane GridPane.rowIndex="1" GridPane.columnIndex="0" GridPane.columnSpan="3">
+                            <TextField fx:id="userInput" promptText="Username" text="Not logged in" styleClass="dualInputAndDisplay" onAction="#onChangeUserRequested" editable="false" AnchorPane.leftAnchor="0" AnchorPane.bottomAnchor="0"/>
+                            <Button text="Change" onAction="#onChangeUserRequested" AnchorPane.rightAnchor="0"/>
+                        </AnchorPane>
+                        <ListView fx:id="countriesList" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" GridPane.columnIndex="0" GridPane.columnSpan="3"/>
+                        <TextField fx:id="countryInput" onAction="#onCountryAdd" prefHeight="27.0" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
+                        <Button fx:id="countryAdd" mnemonicParsing="false" onAction="#onCountryAdd" prefHeight="27.0" prefWidth="27.0" text="+" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+                        <Button fx:id="countryDel" mnemonicParsing="false" onAction="#onCountryDel" prefHeight="27.0" prefWidth="27.0" text="-" GridPane.rowIndex="3" GridPane.columnIndex="2"/>
                     </GridPane>
                 </FlowPane>
             </ScrollPane>
