Hook UI for changing user up to field

--- a/globingular/ui/src/main/resources/fxml/App.fxml
+++ b/globingular/ui/src/main/resources/fxml/App.fxml
@@ -37,7 +37,7 @@
                             <Separator/>
                         </VBox>
                         <AnchorPane GridPane.rowIndex="1" GridPane.columnIndex="0" GridPane.columnSpan="3">
-                            <TextField fx:id="userInput" promptText="Username" text="Not logged in" styleClass="dualInputAndDisplay" onAction="#onChangeUserRequested" onMouseClicked="#onClickUserInputField" editable="false" AnchorPane.leftAnchor="0" AnchorPane.bottomAnchor="0"/>
+                            <TextField fx:id="userInput" promptText="Username" styleClass="dualInputAndDisplay" onAction="#onChangeUserRequested" onMouseClicked="#onClickUserField" editable="false" AnchorPane.leftAnchor="0" AnchorPane.bottomAnchor="0"/>
                             <Button text="Change" onAction="#onChangeUserRequested" AnchorPane.rightAnchor="0"/>
                         </AnchorPane>
                         <ListView fx:id="countriesList" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" GridPane.columnIndex="0" GridPane.columnSpan="3"/>
