--- a/globingular/ui/src/main/resources/html-css/country.css
+++ b/globingular/ui/src/main/resources/html-css/country.css
@@ -11,7 +11,29 @@ body {
     margin: 0;
 }
 
-object {
+/* SVG Styling */
+
+svg {
     /* Fix small bottom overextension */
     margin-bottom: -4px;
+
+    --visited-country: #9cc495;
+    --javafx-default-bg: #f5f5f5;
+}
+
+g {
+    fill: dimgray;
+}
+
+#World {
+    fill: var(--javafx-default-bg);
+}
+
+#Ocean {
+    fill: var(--javafx-default-bg)
+}
+
+[visited], [visited] * {
+    /* !important required to override inline style */
+    fill: var(--visited-country)!important;
 }
