--- a/globingular/integrationtests/src/test/resources/fxml/AppIT.fxml
+++ b/globingular/integrationtests/src/test/resources/fxml/AppIT.fxml
@@ -56,6 +56,7 @@
             <HBox fx:id="statistics" prefHeight="690.0" prefWidth="1280.0">
                 <GridPane fx:id="statisticsGrid" prefHeight="125.0" prefWidth="639.0"/>
                 <Separator orientation="VERTICAL" prefHeight="200.0" />
+                <GridPane fx:id="badgesGrid" prefHeight="125.0" prefWidth="639.0"/>
             </HBox>
         </Tab>
     </TabPane>
